# halo2-aggregation

./: .gitignore  Cargo.toml  README.md  design.md
examples/: simple-agg-example.rs  simple-example.rs
src/: aggregation.rs  lib.rs  lookup.rs  multiopen.rs  permutation.rs  transcript.rs  vanishing.rs  verifier.rs
