[package]
name = "halo2-aggregation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#halo2wrong = {git = "https://github.com/kilic/halo2wrong" }
halo2wrong = { path = "../halo2wrong-trapdoor" }
halo2 = { git = "https://github.com/trapdoor-tech/halo2.git", branch = "agg" }
#halo2 = { path = "../halo2-trapdoor" }